azure-diabetes-predictor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diabetes-predictor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: diabetes-predictor
    spec:
      containers:
        - name: diabetes-predictor
          image: fjukstad/diabetes-predictor
          ports:
            - containerPort: 8000
              name: plumber
